# popis

./: Cargo.toml
src/: fetching.rs  main.rs  popis_error.rs
src/db/: command.rs  data.rs  mod.rs  provider.rs  query.rs
src/domain/: data.rs  helper.rs  mod.rs  votings_data.rs
src/domain/game/: data.rs  mod.rs  random_n.rs
src/domain/random_n_game/: data.rs  engine.rs  mod.rs  orchestrator.rs
src/fetching/: data.rs  document_parsing.rs  mod.rs  tools.rs
src/server/: mod.rs  services.rs
