[package]
name = "popis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.13.0"
thiserror = "1"
serde = "1"
serde_json = "1"
reqwest = "0.11.11"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
env_logger = "0.9"
log = "0.4"
lazy_static = "1.4"
tokio-postgres = "0.7"
rand = "0.8"